kustomize/base/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: llamastack-allow-ingress
spec:
  podSelector:
    matchLabels:
      app: llama-stack
      app.kubernetes.io/instance: llamastack-distribution
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          network.openshift.io/policy-group: ingress
    ports:
    - port: 8321
      protocol: TCP
